# OOP

./: CMakeLists.txt  main.cpp
model/: TicTacToe.cpp  TicTacToe.h  cell.cpp  cell.h  grid.cpp  grid.h  player.cpp  player.h
view/: CellView.cpp  CellView.h  gridView.cpp  gridView.h  mainwindow.cpp  mainwindow.h
